[20 io] add more collection data to existing data with check